--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@babel/preset-react": "^7.0.0",
     "@testing-library/react": "^9.1.3",
     "babel-jest": "^24.8.0",
-    "jest": "^24.8.0"
+    "jest": "^24.8.0",
+    "jest-cli": "^24.9.0"
   },
   "dependencies": {
     "react": "^16.9.0",
